Fixed designs of button in News page in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -277,6 +277,42 @@ body.dark-theme .btn-hiperlink:hover {
     border-color: #336178;
 }
 
+body.dark-theme .btn-outline-primary {
+    color: #7c889b !important;
+    border-color: #7c889b !important;
+    background-color: transparent;
+}
+
+body.dark-theme .btn-outline-primary:hover {
+    color: #ffffff !important;
+    background-color: #7c889b !important;
+    border-color: #7c889b !important;
+}
+
+body.dark-theme .btn-outline-secondary {
+    color: #9c9c9c !important;
+    border-color: #9c9c9c !important;
+    background-color: transparent;
+}
+
+body.dark-theme .btn-outline-secondary:hover {
+    color: #ffffff !important;
+    background-color: #9c9c9c !important;
+    border-color: #9c9c9c !important;
+}
+
+body.dark-theme .btn-outline-danger {
+    color: #ae485e !important;
+    border-color: #ae485e !important;
+    background-color: transparent;
+}
+
+body.dark-theme .btn-outline-danger:hover {
+    color: #ffffff !important;
+    background-color: #ae485e !important;
+    border-color: #ae485e !important;
+}
+
 body.dark-theme .footer,
 body.dark-theme footer {
     background-color: #1a1a1a;
